force-app/main/default/objects/HP_CaseHistory__c/HP_CaseHistory__c.object-meta.xml
<CustomObject>
    <label>HP Case History</label>
    <nameField>
        <label>HP Case History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HP_CaseHistories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>