force-app/main/default/objects/HP_CaseHistory__c/fields/HP_ChangementStatutAncien__c.field-meta.xml
<CustomField>
    <fullName>HP_ChangementStatutAncien__c</fullName>
    <label>Ancien statut</label>
    <length>80</length>
    <type>Text</type>
</CustomField>