force-app/main/default/objects/HP_CaseHistory__c/fields/HP_ChangementStatutNouveau__c.field-meta.xml
<CustomField>
    <fullName>HP_ChangementStatutNouveau__c</fullName>
    <label>Nouveau statut</label>
    <length>80</length>
    <type>Text</type>
</CustomField>