force-app/main/default/objects/HP_CaseHistory__c/fields/HP_DateAttribution__c.field-meta.xml
<CustomField>
    <fullName>HP_DateAttribution__c</fullName>
    <label>Date Attribution</label>
    <type>DateTime</type>
</CustomField>