force-app/main/default/objects/HP_CaseHistory__c/fields/HP_DateChangementStatut__c.field-meta.xml
<CustomField>
    <fullName>HP_DateChangementStatut__c</fullName>
    <label>Date de changement statut</label>
    <type>DateTime</type>
</CustomField>