force-app/main/default/objects/HP_CaseHistory__c/fields/HP_DateReponse__c.field-meta.xml
<CustomField>
    <fullName>HP_DateReponse__c</fullName>
    <description>OBSOLETE, ne pas utiliser</description>
    <label>Date Réponse</label>
    <type>DateTime</type>
</CustomField>