force-app/main/default/objects/HP_CaseHistory__c/fields/HP_DureeTraitement__c.field-meta.xml
<CustomField>
    <fullName>HP_DureeTraitement__c</fullName>
    <label>Duree Traitement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>