force-app/main/default/objects/HP_CaseHistory__c/fields/HP_DureeTraitementBase60__c.field-meta.xml
<CustomField>
    <fullName>HP_DureeTraitementBase60__c</fullName>
    <formula>LPAD(TEXT(FLOOR( HP_DureeTraitement__c )),2) +&quot;,&quot;+ LPAD(TEXT(ROUND((HP_DureeTraitement__c - FLOOR(HP_DureeTraitement__c))*60,0)),2,&apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée de traitement (base60)</label>
    <type>Text</type>
</CustomField>