force-app/main/default/objects/HP_CaseHistory__c/fields/HP_Type__c.field-meta.xml
<CustomField>
    <fullName>HP_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DMT</fullName>
                <default>true</default>
                <label>DMT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>